<resources>
    <string name="app_name">COOKED</string>
    <string name="login_header">Login</string>
    <string name="email_address_header">Email Address</string>
    <string name="password_header">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="sign_in">Sign In</string>
    <string name="dont_have_account">Don\'t have an account?</string>
    <string name="register">Register!</string>
    <string name="saved_recipes_header">Saved Recipes</string>
    <string name="shopping_list_header">Shopping List</string>
    <string name="pantry_header">Pantry</string>

    <string name="back">BACK</string>
    <string name="confirm">Confirm</string>
    <string name="reset_password">Reset Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="two_factor_authentication">Two-Factor\nAuthentication</string>
    <string name="enter_digit_prompt">Enter the 6-digit code from your\nemail address.</string>


    <string-array name="difficulty_array">
        <item>Easy</item>
        <item>Medium</item>
        <item>Hard</item>
    </string-array>

    <string name="serving_size_template">Serves %d</string>
    <string name="duration_template">%d MINS</string>

</resources>