<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#F5F5F5">

    <!-- Fixed Home Section -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#95DFAA"
        android:padding="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Home"
            android:textSize="16sp"
            android:textColor="@color/white"
            android:layout_centerInParent="true"
            android:textAlignment="center"
            android:textStyle="bold" />
    </RelativeLayout>

    <!-- Saved Recipes Section -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:layout_marginTop="15dp"
        android:paddingTop="10dp"
        android:orientation="vertical"
        android:background="@color/white">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/saved_recipes_header"
            android:textStyle="bold"
            android:textSize="22dp"
            android:layout_marginBottom="10dp"
            android:textColor="@color/black"
            android:drawableEnd="@android:drawable/arrow_down_float"
            />

        <!-- Horizontal Scrollable Images -->
        <HorizontalScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:scrollbars="none"
            android:fadeScrollbars="false">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_width="127dp"
                    android:layout_height="124dp"
                    android:background="@drawable/rounded_edittext"
                    android:layout_marginRight="15dp" />

                <ImageView
                    android:layout_width="127dp"
                    android:layout_height="124dp"
                    android:background="@drawable/rounded_edittext"
                    android:layout_marginRight="15dp" />

                <ImageView
                    android:layout_width="127dp"
                    android:layout_height="124dp"
                    android:background="@drawable/rounded_edittext"
                    android:layout_marginRight="15dp" />
            </LinearLayout>
        </HorizontalScrollView>
    </LinearLayout>

    <!-- Shopping List Section -->
    <LinearLayout
        android:id="@+id/open_shopping_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:layout_marginTop="15dp"
        android:paddingTop="10dp"
        android:orientation="vertical"
        android:background="#88E3FF">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/shopping_list_header"
            android:textStyle="bold"
            android:textSize="22dp"
            android:textColor="@color/black"
            android:layout_marginBottom="10dp"
            android:drawableEnd="@android:drawable/arrow_down_float"
            />
    </LinearLayout>

    <!-- Shopping List Items as ListView -->
    <ListView
        android:id="@+id/shopping_list_view"
        android:layout_width="match_parent"
        android:layout_height="515px"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:background="@color/white"/>

    <!-- Sort Button -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:background="@color/white">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Sort By"
            android:textColor="@color/black"
            android:drawableEnd="@android:drawable/arrow_down_float"
            android:background="@android:color/transparent" />

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <Button
            android:id="@+id/add_to_pantry"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Add Checked to Pantry"
            android:textColor="@color/black"
            android:background="@android:color/transparent"
            />
    </LinearLayout>

    <!-- Pantry Section -->
    <LinearLayout
        android:id="@+id/open_pantry"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginRight="15dp"
        android:background="#CEB5FA"
        android:orientation="vertical"
        android:paddingLeft="15dp"
        android:paddingTop="10dp"
        android:paddingRight="15dp"
        android:paddingBottom="10dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableEnd="@android:drawable/arrow_down_float"
            android:text="@string/pantry_header"
            android:textColor="@color/black"
            android:textSize="22dp"
            android:textStyle="bold" />
    </LinearLayout>

    <ListView
        android:id="@+id/pantry_list_view"
        android:layout_width="match_parent"
        android:layout_height="515px"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:background="@color/white" />
</LinearLayout>
